--- a/styles.css
+++ b/styles.css
@@ -19,20 +19,31 @@ form {
 }
 
 .section, .title {
+	font-size: .67vw;
     background-color: gray;
     width: fit-content;
     text-align: center;
-    border: 3px solid black;
-    border-radius: 10px;
+    border: .1vw solid black;
+    border-radius: .5vw;
     margin: 1.5vw;
     margin-left: 50%;
     transform: translateX(-50%);
-    padding: 12px 17px;
+    padding: 1vw 1.67vw;
+}
+
+.section input[type="radio"]{
+	width: .75vw;
+	height: .75vw;
 }
 
 form input.btn.btn-primary {
-    margin-left: 50%;
+	border: .1vw solid black;
+    margin-left: 30%;
     transform: translateX(-50%);
+	width: 5vw;
+	font-size: .67vw;
+	height: 2vw;
+	position: absolute;
 }
 
 body {
