trying to fix form 3

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@
     --card-small-line-height: calc(var(--card-small-height) / var(--card-line-factor));
 }
 
+h2 {
+	all: unset;
+}
 
 form {
     display: table;
